--- a/class-02-jquery-and-events/pair-assignment/lillian-jonathanD/styles/modules.css
+++ b/class-02-jquery-and-events/pair-assignment/lillian-jonathanD/styles/modules.css
@@ -1,7 +1,8 @@
-/* TODO: Give the site header a nice background color, from your selected color scheme. */
+/* DONE: Give the site header a nice background color, from your selected color scheme. */
 
 .site-header {
   padding: .1em;
+  background-color: #F0F0D3;
 }
 
 .main-nav {
@@ -15,9 +16,10 @@
   font-size: 1.5em;
   padding: .5em .2em;
   border-bottom: 1px solid #ccc;
+  list-style: none;
 }
 
-/* TODO: Style the filters so they look good on small screens:
+/* DONE: Style the filters so they look good on small screens:
     Use the full width, and remove the list bullet. */
 
 #filters {
@@ -25,7 +27,8 @@
 }
 
 #filters select {
-
+  list-style-type: none;
+  width: 100%;
 }
 
 .template {
