--- a/class-03-responsive-mobile-first/pair-assignment/lillian-jonathanD/styles/modules.css
+++ b/class-03-responsive-mobile-first/pair-assignment/lillian-jonathanD/styles/modules.css
@@ -8,9 +8,10 @@
   padding: 0 0 .2em 1em;
 }
 
-/* TODO: Add styles for the icon-menu class. It should be bigger, and off to the right. */
+/* DONE: Add styles for the icon-menu class. It should be bigger, and off to the right. */
 .icon-menu {
-
+  display: inline-block;
+  font-size: 3em;
 }
 
 .main-nav {
@@ -52,6 +53,45 @@
   font-weight: bold;
   text-decoration: none;
 }
+
+
+@media only screen and (min-width: 960px) {
+  .icon-menu {
+    display: none;
+  }
+
+  .main-nav ul {
+    display: block;
+    text-align: center;
+}
+
+.main-nav li {
+  display: inline;
+}
+
+.main-nav li a {
+  display: inline;
+  padding: 1.500em;
+}
+
+.headTitleGroup {
+  justify-content: center;
+  display: flex;
+}
+
+
+.site-header {
+  max-width: 100%;
+}
+
+.heading-group-h1 {
+  text-align: center;
+}
+
+
+}
+
+
 
 /* TODO: Now add styles for how things should look on a larger screen:
          - Hide the hamburger.
