--- a/class-03-responsive-mobile-first/pair-assignment/lillian-jonathanD/styles/layout.css
+++ b/class-03-responsive-mobile-first/pair-assignment/lillian-jonathanD/styles/layout.css
@@ -28,6 +28,11 @@
     float: none;
   }
 
+  .filterStyle {
+    justify-content: center;
+    display: flex;
+  }
+
   #filters select {
     width: 15em;
     margin: .2em .2em;
