updated handlebars template, added some styling.

--- a/class-04-templates/pair-assignment/starter-code/styles/layout.css
+++ b/class-04-templates/pair-assignment/starter-code/styles/layout.css
@@ -1,39 +1,18 @@
-.pull-left {
-  float: left;
-}
-
-.pull-right {
-  float: right;
-}
-
-.clearfix::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.heading-group-h1 {
-  max-width: 80%;
-}
-
 #filters select {
   width: 90%;
   margin: .2em 5%;
+  justify-content: center;
 }
 
-@media only screen and (min-width: 640px) {
-  .heading-group-h1 {
-    padding: .1em .1em .1em 2em;
-    float: none;
+@media screen and (min-width: 600px) {
+  .icon-menu {
+    display: none;
   }
+  nav ul {
+    display: unset;
+  }
+}
 
-  #filters select {
-    width: 15em;
-    margin: .2em .2em;
-  }
-
-  #filters li {
-    width: 20em;
-    display: inline;
-  }
+footer {
+  margin-top: 5em;
 }
