--- a/class-04-templates/pair-assignment/starter-code/styles/base.css
+++ b/class-04-templates/pair-assignment/starter-code/styles/base.css
@@ -1,39 +1,42 @@
-img {
-  max-width: 100%;
+html {
+  font-family: 'Arial';
+  margin: 10%;
 }
 
 body {
   line-height: 1.5;
   font-size: 100%;
   color: #313131;
+  margin: 0;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+  border: 5px solid #2C3E50;
+  margin: 10px auto;
 }
 
 hr {
   margin: 1em;
-  width: 80%;
+  width: 90%;
 }
 
 /*TEXT STYLES
 =======================================*/
-p {
-  font-size: 1em;
-}
-
-address {
-  display: inline-block;
+h1 {
+  color: #2C3E50;
+  margin: 0;
 }
 
 /*LINK STYLES
 =======================================*/
 
-a, a:link, a:active {
+a {
+  color: #EA4C88;
+}
+
+footer a {
   text-decoration: none;
-  color: #777;
-}
-
-a:hover, a:focus {
-  color: #29506D;
-}
-
-a:visited {
+  padding-right: 10px;
 }
